CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(clusterisator)

OPTION( WITH_TESTS "Build tests" OFF)
OPTION( WITH_PROF "Build with profiling" OFF)
OPTION( WITH_DEBUG "Build in debug mode" OFF)


INCLUDE_DIRECTORIES( . )
MESSAGE("CMAKE_BINARY_DIR : ${CMAKE_BINARY_DIR}")
MESSAGE("CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR}")

SET(EXECUTABLE_OUTPUT_PATH	${CMAKE_BINARY_DIR})
SET(   LIBRARY_OUTPUT_PATH	${CMAKE_BINARY_DIR})
 
IF( WIN32 )
	SET( CMAKE_CONFIGURATION_TYPES "Debug;Release;" CACHE STRING "limited configs" FORCE)
	SET( CMAKE_CXX_FLAGS_DEBUG          "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1" )
	SET( CMAKE_CXX_FLAGS_RELEASE        "/MT /O2 /Ob2 /D NDEBUG")
ELSE()
	SET ( CMAKE_BUILD_TYPE "RELEASE"     )
#	SET ( CMAKE_BUILD_TYPE "DEBUG"     )
#	IF( WITH_DEBUG )
#		SET ( CMAKE_BUILD_TYPE "DEBUG"     )
#	ELSE( WITH_DEBUG )
#		SET ( CMAKE_BUILD_TYPE "RELEASE"     )
#	ENDIF( WITH_DEBUG )

	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -pedantic -fmessage-length=0  -fPIC" )
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-conversion -Wno-sign-compare")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-strict-aliasing -Wno-unused-parameter")
ENDIF( WIN32 )

#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
IF( WITH_PROF )
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
ENDIF( WITH_PROF )
 
#INCLUDE_DIRECTORIES($ENV{CPLEX_INC})
SET(CPLEX_LIB /opt/ibm/ILOG/CPLEX_Studio126/cplex/lib/x86-64_linux/static_pic)
SET(CPLEX_INC /opt/ibm/ILOG/CPLEX_Studio126/cplex/include/ilcplex)
INCLUDE_DIRECTORIES( ${CPLEX_INC} )

INCLUDE_DIRECTORIES( clustering bipartite_data unipartite_data columnsgeneration heuristic)

ADD_SUBDIRECTORY(clustering)
ADD_SUBDIRECTORY(heuristic)
ADD_SUBDIRECTORY(columnsgeneration)

ADD_SUBDIRECTORY(bipartite_data)
ADD_SUBDIRECTORY(unipartite_data)

ADD_SUBDIRECTORY(exe)

