
IF(TRUE)
ADD_EXECUTABLE( unipartite  main_unipartite.cpp )
ADD_EXECUTABLE( unipartite_cpp  main_unipartite_cpp.cpp )
IF( WIN32 )
	TARGET_LINK_LIBRARIES(unipartite     dataunipartite columnsgeneration clustering ${CPLEX_LIB}/ilocplex.lib ${CPLEX_LIB}/cplex124.lib )
	TARGET_LINK_LIBRARIES(unipartite_cpp dataunipartite columnsgeneration clustering ${CPLEX_LIB}/ilocplex.lib ${CPLEX_LIB}/cplex124.lib ) 
ELSE()
	TARGET_LINK_LIBRARIES(unipartite     dataunipartite columnsgeneration clustering ${CPLEX_LIB}/libilocplex.a ${CPLEX_LIB}/libcplex.a pthread ) 
	TARGET_LINK_LIBRARIES(unipartite_cpp dataunipartite columnsgeneration clustering ${CPLEX_LIB}/libilocplex.a ${CPLEX_LIB}/libcplex.a pthread ) 
ENDIF()
ENDIF()

IF(TRUE)
ADD_EXECUTABLE( bipartite  main_bipartite.cpp )
ADD_EXECUTABLE( bipartite_cpp  main_bipartite_cpp.cpp )
IF( WIN32 )
	TARGET_LINK_LIBRARIES(bipartite     databipartite columnsgeneration clustering heuristic ${CPLEX_LIB}/ilocplex.lib ${CPLEX_LIB}/cplex124.lib )
	TARGET_LINK_LIBRARIES(bipartite_cpp databipartite columnsgeneration clustering heuristic ${CPLEX_LIB}/ilocplex.lib ${CPLEX_LIB}/cplex124.lib ) 
ELSE()
	TARGET_LINK_LIBRARIES(bipartite     databipartite columnsgeneration clustering heuristic ${CPLEX_LIB}/libilocplex.a ${CPLEX_LIB}/libcplex.a pthread ) 
	TARGET_LINK_LIBRARIES(bipartite_cpp databipartite columnsgeneration clustering heuristic ${CPLEX_LIB}/libilocplex.a ${CPLEX_LIB}/libcplex.a pthread ) 
	ENDIF()
ENDIF()